fixed text color

--- a/html/portfolio/eventbrite-multi-user-access.html
+++ b/html/portfolio/eventbrite-multi-user-access.html
@@ -18,7 +18,7 @@
 	<div id="titleslide">
 		<div class="valign">
 			<h1 class="pagetitle">Multi-User Access Redesign</h1>
-			<h3 class="lightserif centercontent">Redesigning one of Eventbrite’s most broken features</h3>
+			<h3 class="light centercontent">Redesigning one of Eventbrite’s most broken features</h3>
 		</div>
 	</div>
 
@@ -26,7 +26,7 @@
 		<div class="overlay">
 			<div class="valign centersection">
 				<h1 class="phototitle" style="color: white; text-align: center !important;">Overview</h1>
-				<p class="lightserif">Eventbrite is the world’s largest marketplace for live experiences like concerts, food festivals, and marathons. The multi-user access feature allows event organizers to manage and collaborate on events together. The feature was incredibly broken long overdue for a redesign.</p>
+				<p class="light">Eventbrite is the world’s largest marketplace for live experiences like concerts, food festivals, and marathons. The multi-user access feature allows event organizers to manage and collaborate on events together. The feature was incredibly broken long overdue for a redesign.</p>
 			</div>
 		</div>
 	</div>
@@ -35,26 +35,26 @@
 		<div class="valign centersection">
 			<img class="centercontent" src="../../img/kenny.png"></p>
 			<h1 class="marginauto center" style="color: #4a4a4a;">My Team &amp; Role</h1>
-			<p class="darkserif center marginauto">I was the only User Experience Designer on the team for this project. The team also had a Product Manager, and three backend engineers. I was responsible for concept sketches, wireframes, user flows, and user testing.</p>
+			<p class="dark center marginauto">I was the only User Experience Designer on the team for this project. The team also had a Product Manager, and three backend engineers. I was responsible for concept sketches, wireframes, user flows, and user testing.</p>
 		</div>
 	</div>
 
 	<div id="research">
 		<div class="lefthalfcol valign centercontent">
 			<img src="../../img/ebresearch.png"><p></p>
-			<p class="lightserif">Invision’s Collaboration Feature</p>
+			<p class="light">Invision’s Collaboration Feature</p>
 		</div>
 		<div class="righthalfcol valign">
 			<h1>Research</h1>
-			<p class="lightserif">During this phase of the project I interviewed stakeholders, the support team and account managers to identify all the pain points with the existing design. I also explored products that had a similar collaboration feature for inspiration.</p>
+			<p class="light">During this phase of the project I interviewed stakeholders, the support team and account managers to identify all the pain points with the existing design. I also explored products that had a similar collaboration feature for inspiration.</p>
 		</div>
 	</div>
 
 	<div id="ideation">
 		<div id="ideationcontent" class="valign">
 			<h1>Ideation</h1>
-			<p class="darkserif">I identified solutions that would solve the feature’s problems I discovered in the research phase.</p>
-			<p class="darkserif">1. Dependencies of “sub-user and parent users” needed to be removed.<br>
+			<p class="dark">I identified solutions that would solve the feature’s problems I discovered in the research phase.</p>
+			<p class="dark">1. Dependencies of “sub-user and parent users” needed to be removed.<br>
 			2. Organizers need to be able to invite already-existing Eventbrite users to collaborate on an event.<br>
 			3. All organizers should be able to create their own events.<br>
 			4. Permissions should be grouped into roles for simplification.<br>
@@ -90,7 +90,7 @@
 			<div class="middlethirdcol"><img src="../../img/dropdown.png"></div>
 			<div class="rightthirdcol"><img src="../../img/edit.png"></div>
 			<h1 class="centersection">User Testing</h1>
-			<p class="lightserif centersection">We had little time to test during this project, so I chose to test the best interaction for editing a collaborator’s custom permissions. There were three main concepts I tested: expandable drawers, dropdowns, and an edit button.</p>
+			<p class="light centersection">We had little time to test during this project, so I chose to test the best interaction for editing a collaborator’s custom permissions. There were three main concepts I tested: expandable drawers, dropdowns, and an edit button.</p>
 			</div>
 		</div>
 	</div>
@@ -99,7 +99,7 @@
 		<div class="overlay">
 			<div class="valign centersection">
 				<h1 class="centercontent phototitle">Current Status</h1>
-				<p class="lightserif valign">After ending my internship, the project moved into the product design and engineering phases. The feature is scheduled to release early this year.</p>
+				<p class="light valign">After ending my internship, the project moved into the product design and engineering phases. The feature is scheduled to release early this year.</p>
 			</div>
 		</div>
 	</div>
