--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div id="story">
 		<div id="storycontent">
 			<p class="beg">here’s my story…</p>
-			<p class="lightserif storybody">I am a senior at the University of Washington studying Informatics. My professional background is primarily in design, but I also have a technical background from taking courses in computer science, data science, web programming and Android development. I’ve worked at a startup, medium-sized company, agency, and also done freelance work. I’m passionate about designing simple, delightful, meaningful experiences. I’m currently exploring full-time opportunities for after I graduate this June.</p>
+			<p class="light storybody">I am a senior at the University of Washington studying Informatics. My professional background is primarily in design, but I also have a technical background from taking courses in computer science, data science, web programming and Android development. I’ve worked at a startup, medium-sized company, agency, and also done freelance work. I’m passionate about designing simple, delightful, meaningful experiences. I’m currently exploring full-time opportunities for after I graduate this June.</p>
 		</div>
 	</div>
 
