--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
 	</div>
 
 	<div id="portblogcont">
-		<div id="portfolio">
-			<p class="beg">my work</p>
-			<div class="center abutton centercontent"><a href="html/portfolio/portfolio.html"><button class="datbutton">portfolio</button></a></div>
-		</div>
+		<div class="centercontent valign" id="buttons">
+			<div id="portfolio">
+				<p class="beg">my work</p>
+				<div class="center abutton centercontent"><a href="html/portfolio/portfolio.html"><button class="datbutton">portfolio</button></a></div>
+			</div>
 
-		<div id="blog">
-			<p class="beg">i like writing</p>
-			<div class="center abutton centercontent"><a href="html/blog/blog.html"><button class="datbutton">my blog</button></a></div>
-		</div>
+			<div id="blog">
+				<p class="beg">i like writing</p>
+				<div class="center abutton centercontent"><a href="html/blog/blog.html"><button class="datbutton">my blog</button></a></div>
+			</div>
 
-		<div id="contact">
-			<p class="beg">let's talk</p>
-			<div class="center abutton centercontent"><a href="mailto:kennyraymond20@gmail.com"><button class="datbutton">hello</button></a></div>
+			<div id="contact">
+				<p class="beg">let's talk</p>
+				<div class="center abutton centercontent"><a href="mailto:kennyraymond20@gmail.com"><button class="datbutton">hello</button></a></div>
+			</div>
 		</div>
 	</div>
 
